fix other declaration of checker
